--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <input type="number" id="year" required/>
         </div>
 
-        <div class="form-item">
+        <div class="form-item-radio">
           <label for="review" class="primary">Review</label><br>
-          <input type="radio" name="review" value="Good" required/>
+          <input type="radio" class="good" name="review" value="Good" required/>
           <label for="good">Good</label><br>
-          <input type="radio" name="review" value="Ok" required/>
+          <input type="radio" class="ok" name="review" value="Ok" required/>
           <label for="ok">Ok</label><br>
-          <input type="radio" name="review" value="Bad" required/>
+          <input type="radio" class="bad" name="review" value="Bad" required/>
           <label for="bad">Bad</label><br>
         </div>
       </div>
@@ -42,7 +42,7 @@
 
 
     <h1>Movie List</h1>
-    <ul id="Movie-list"></ul>
+    <ul name="result" id="Movie-list"></ul>
 
   </body>
 </html>
